Fix alignment issue after updating angular-material version

--- a/app/styles/scss/login.scss
+++ b/app/styles/scss/login.scss
@@ -2,7 +2,6 @@
 
 .login-overlay {
 	position: relative;
-	text-align: center;
 	top: 0;
 	left: 0;
 	right: 0;
